ci: add .nojekyll to prevent asset path issues on GitHub Pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Add 404 for SPA refresh
         run: cp build/web/index.html build/web/404.html
 
+      - name: Disable Jekyll
+        run: touch build/web/.nojekyll
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
